# gor

./: Cargo.toml
src/: board.rs  cli.rs  http.rs  lib.rs
src/static/: index.html
