[package]
name = "gor"
version = "0.1.0"
authors = ["U. Zalakain", "Linus Heckemann"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

[[bin]]
name = "gor-cli"
path = "src/bin/gor-cli.rs"

[[bin]]
name = "gor-http"
path = "src/bin/gor-http.rs"
